--- a/page-replacement/Makefile
+++ b/page-replacement/Makefile
@@ -1,7 +1,7 @@
 INCLUDE = ./include
 
 all:
-	gcc -g page-replacement.c replacement_alg.c -I./include -o page-replacement
+	gcc page-replacement.c replacement_alg.c -I./include -o page-replacement
 
 debug:
 	gdb page-replacement
